<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_bcfilter"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/text_filter_BC"
                android:inputType="text" />

            <ListView
                android:id="@+id/zw_BCItemListView"
                android:layout_width="300dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_BC_name"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/editText_bcname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_BC_time"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/editText_bctime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_BC_type"
                    android:textSize="28sp" />

                <EditText
                    android:id="@+id/editText_bctype"
                    android:layout_width="700dp"
                    android:layout_height="50dp"/>

                <Button
                    android:id="@+id/button_bc_save"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/text_BC_save" />

            </LinearLayout>

            <ListView
                android:id="@+id/list_bc_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>